--- a/farmer-portal/package.json
+++ b/farmer-portal/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.0",
-    "@rythumowa/ui": "workspace:*",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.6.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "16.0.7",
