--- a/rythumowas.shop/.env.example
+++ b/rythumowas.shop/.env.example
@@ -6,5 +6,8 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=YOUR_PUBLISHABLE_KEY
 CLERK_SECRET_KEY=YOUR_SECRET_KEY
 CLERK_WEBHOOK_SECRET=YOUR_WEBHOOK_SECRET
 
+# Medusa Backend
+NEXT_PUBLIC_MEDUSA_BACKEND_URL="http://localhost:9000"
+
 # App
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
