Migrate to Stack Auth: Remove Clerk, update Prisma schema, add Stack Auth setup

--- a/rythumowas.shop/package.json
+++ b/rythumowas.shop/package.json
@@ -27,7 +27,6 @@
     "coupling-graph": "npx madge --extensions js,jsx,ts,tsx,css,md,mdx ./ --exclude '.next|tailwind.config.js|reset.d.ts|prettier.config.js|postcss.config.js|playwright.config.ts|next.config.js|next-env.d.ts|instrumentation.ts|e2e/|README.md|.storybook/|.eslintrc.js' --image graph.svg"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.0.0",
     "@next/bundle-analyzer": "^15.3.1",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -53,6 +52,7 @@
     "@semantic-release/github": "^10.3.5",
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^13.0.0",
+    "@stackframe/stack": "^2.8.54",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/otel": "^1.12.0",
     "class-variance-authority": "^0.7.0",
