fix: update pnpm-lock.yaml after Clerk to Stack Auth migration
- Updated lockfile to reflect Stack Auth instead of Clerk
- Added environment example files for all projects
- Removed Clerk from farmer-portal
- Updated documentation references from Clerk to Stack Auth
- This fixes the Vercel build error: ERR_PNPM_OUTDATED_LOCKFILE

--- a/medusa-backend/.env.example
+++ b/medusa-backend/.env.example
@@ -1,27 +1,18 @@
-# Database
-DATABASE_URL=postgres://localhost/medusa-rythumowa
+﻿# Database Configuration
+# PostgreSQL connection string for Medusa
+DATABASE_URL=postgresql://user:password@localhost:5432/medusa-store?schema=public
 
-# Redis
+# Redis Configuration
+# Required for event bus and cache
 REDIS_URL=redis://localhost:6379
 
-# JWT & Cookies
-JWT_SECRET=something-secret-change-this
-COOKIE_SECRET=something-secret-change-this
-
-# CORS
+# CORS Configuration
+# Comma-separated list of allowed origins
 STORE_CORS=http://localhost:3000,http://localhost:8000
-ADMIN_CORS=http://localhost:7000,http://localhost:7001,http://localhost:9000
+ADMIN_CORS=http://localhost:7001,http://localhost:7000,http://localhost:9000
 
-# Stripe (Optional)
-STRIPE_API_KEY=
-STRIPE_WEBHOOK_SECRET=
-
-# Razorpay (Optional - for India)
-RAZORPAY_KEY_ID=
-RAZORPAY_KEY_SECRET=
-
-# Resend (Email)
-RESEND_API_KEY=
+# Medusa Admin Configuration
+OPEN_BROWSER=true
 
 # Node Environment
 NODE_ENV=development
