--- a/rythumowas.shop/vercel.json
+++ b/rythumowas.shop/vercel.json
@@ -1,5 +1,1 @@
-﻿{
-  "buildCommand": "cd ../.. && pnpm install --frozen-lockfile && cd rythumowas.shop && pnpm build",
-  "installCommand": "cd ../.. && pnpm install --frozen-lockfile",
-  "outputDirectory": ".next"
-}
+{"outputDirectory":".next","buildCommand":"cd ../.. \u0026\u0026 pnpm install --frozen-lockfile \u0026\u0026 cd rythumowas.shop \u0026\u0026 pnpm build","installCommand":"cd ../.. \u0026\u0026 pnpm install --frozen-lockfile"}
