--- a/rythumowas.shop/vercel.json
+++ b/rythumowas.shop/vercel.json
@@ -1,1 +1,5 @@
-{"outputDirectory":".next","buildCommand":"cd ../.. \u0026\u0026 pnpm install --frozen-lockfile \u0026\u0026 cd rythumowas.shop \u0026\u0026 pnpm build","installCommand":"cd ../.. \u0026\u0026 pnpm install --frozen-lockfile"}
+{
+  "buildCommand": "cd ../.. && pnpm install --frozen-lockfile && cd rythumowas.shop && pnpm build",
+  "installCommand": "cd ../.. && pnpm install --frozen-lockfile",
+  "outputDirectory": ".next"
+}
