fix: correct path in vercel.json - use cd .. instead of cd ../..

--- a/rythumowas.shop/vercel.json
+++ b/rythumowas.shop/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd ../.. && pnpm install --frozen-lockfile && cd rythumowas.shop && pnpm build",
-  "installCommand": "cd ../.. && pnpm install --frozen-lockfile",
+  "buildCommand": "cd .. && pnpm install --frozen-lockfile && cd rythumowas.shop && pnpm build",
+  "installCommand": "cd .. && pnpm install --frozen-lockfile",
   "outputDirectory": ".next"
 }
