--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,9 @@
 {
   "version": 2,
-  "root": "rythumowas.shop",
-  "framework": "nextjs",
-  "installCommand": "pnpm install --frozen-lockfile",
-  "buildCommand": "pnpm run build",
-  "outputDirectory": ".next",
-  "git": {
-    "deploymentEnabled": {
-      "main": true
-    }
-  }
+  "builds": [
+    { "src": "rythumowas.shop/next.config.ts", "use": "@vercel/next" }
+  ],
+  "installCommand": "cd rythumowas.shop && pnpm install --frozen-lockfile",
+  "buildCommand": "cd rythumowas.shop && pnpm run build"
 }
 
