--- a/medusa-backend/.nixpacks.toml
+++ b/medusa-backend/.nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs_20", "pnpm-10_x", "openssl"]
 
 [phases.install]
-cmds = []
+cmds = ["pnpm install --frozen-lockfile"]
 
 [phases.build]
 cmds = ["pnpm install --frozen-lockfile"]
